add all images for ReadMe plus some more styling of cards on index pg

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </div>
 
         <div class="col-sm firstRow quote">
-          <u> <b>"Who looks outside dreams, who looks inside wakes" <br> – Jung</b></u>
+          <u> <b>"Who looks outside dreams,<br> who looks inside wakes" <br> – Jung</b></u>
 
 
         </div>
